// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`with baseThemeId > attaches one style node containing overrides with the correct theme selector 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--lineShadow-css:pink;
}}
.secondary-theme.secondary-theme .navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:pink;
	--lineShadow-css:red;
}
.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:pink;
	--lineShadow-css:red;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:green;
	--boxShadow-css:black;
	--lineShadow-css:black;
}}
@media not print {.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:green;
	--boxShadow-css:black;
	--lineShadow-css:black;
}}"
`;

exports[`with secondary theme > attaches one style node containing override 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--lineShadow-css:pink;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:purple;
	--lineShadow-css:red;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:purple;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:purple;
}}"
`;

exports[`with targetDocument > attaches one style node containing override on the target document 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--lineShadow-css:pink;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:purple;
	--lineShadow-css:red;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:purple;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:purple;
}}"
`;

exports[`without secondary theme > attaches one style node containing override 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--lineShadow-css:pink;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:purple;
	--lineShadow-css:red;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:purple;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:purple;
}}"
`;
